configure cors and get and put request implementation

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT= 8000
 MONGO_URL = "mongodb+srv://milukadesilva88:mL4Nh8KA1iDngiXI@cluster0.dmypze3.mongodb.net/employeedatabase"
-MONGO_COLLECTION_NAME = "employees",
-ALLOWED_CORS_URLS = ["http://localhost:300"]
+MONGO_COLLECTION_NAME = "employees"
+ALLOWED_CORS_URL = "http://localhost:3000"
