--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT= 8000
 MONGO_URL = "mongodb+srv://milukadesilva88:mL4Nh8KA1iDngiXI@cluster0.dmypze3.mongodb.net/employeedatabase"
 MONGO_COLLECTION_NAME = "employees"
 ALLOWED_CORS_URL = "http://localhost:3000"
+SWAGGER_SERVER_URL = "http://localhost:8000/api"
