--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "yup": "^1.4.0"
   }
 }
