--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
+    "swagger-ui-express": "4.6.3",
     "yup": "^1.4.0"
   }
 }
